syntax = "proto3";

package raftd.v1;

service KVService {
    rpc Set(SetRequest) returns (SetResponse) {}
    rpc Get(GetRequest) returns (GetResponse) {}
    rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}

message SetRequest {
    string key = 1;
    bytes value = 2;
}

message SetResponse {}

message GetRequest {
    string key = 1;
}

message GetResponse {
    bytes value = 1;
}

message DeleteRequest {
    string key = 1;
}

message DeleteResponse {}